listing fix for mapping presentation

--- a/presentations/mapper/mapper.tex
+++ b/presentations/mapper/mapper.tex
@@ -42,6 +42,7 @@ tabsize=4,
 showspaces=false,
 showstringspaces=false,
 breaklines=true,
+firstnumber=100,
 emph={
   val, var
 },
@@ -246,7 +247,7 @@ if (verySpecial(from)) {
     if (realB != null)
       b = realB; 
   } 
-  to.c().d().e().setB(b)
+  to.c().d().e().setB(b);
 }
 \end{lstlisting}
 \end{frame}
