--- a/presentations/mapper/mapper.tex
+++ b/presentations/mapper/mapper.tex
@@ -31,13 +31,14 @@
 \definecolor{javalinenumbers}{RGB}{79,80,81} % linenumbers
 \lstset{language=Java,
 basicstyle=\ttfamily \small,
-keywordstyle=\color{javapurple}\bfseries,
+keywordstyle=\color{myOrange}\textbf,
 stringstyle=\color{javared},
 commentstyle=\color{javagreen},
 morecomment=[s][\color{javadocblue}]{/**}{*/},
 numbers=left,
-numberstyle=\color{javalinenumbers}\scriptsize,
+numberstyle=\color{javalinenumbers}\tiny,
 numbersep=10pt,
+xleftmargin=20pt,
 tabsize=4,
 showspaces=false,
 showstringspaces=false,
@@ -46,7 +47,7 @@ firstnumber=100,
 emph={
   val, var
 },
-emphstyle=\color{javapurple}\bfseries,
+emphstyle=\color{myOrange}\bfseries,
 }
 \usepackage{hyperref}
 \usepackage{multirow}
@@ -96,9 +97,9 @@ emphstyle=\color{javapurple}\bfseries,
   \tableofcontents[1]
 }
 
-\section{Parser combinators}
+\section{Parser combinators (xRools)}
 \frame
-{\frametitle{XRools}
+{\frametitle{xRools}
 \begin{itemize}
   \item Written by Scala experts from Kiev
   \item XPath like DSL
@@ -108,15 +109,15 @@ emphstyle=\color{javapurple}\bfseries,
 }
 
 \frame
-{\frametitle{XRools}
+{\frametitle{xRools}
 \begin{center}
   \large Talk is cheap. Show me the code.
 \end{center}
 }
 
-\subsection{XRools Pros}
+\subsection{xRools Pros}
 \frame
-{\frametitle{XRools Pros}
+{\frametitle{xRools Pros}
 \begin{itemize}
     \item<1-> Scala
     \item<2-> Non-developers write rules
@@ -124,9 +125,9 @@ emphstyle=\color{javapurple}\bfseries,
 \end{itemize}
 }
 
-\subsection{XRools Cons}
+\subsection{xRools Cons}
 \frame
-{\frametitle{XRools Cons}
+{\frametitle{xRools Cons}
 \begin{itemize}
     \item<1-> Scala
     \item<2-> Non-developers write rules
@@ -138,9 +139,9 @@ emphstyle=\color{javapurple}\bfseries,
 \end{itemize}
 }
 
-\subsection{XRools}
+\subsection{xRools}
 \frame
-{\frametitle{XRools}
+{\frametitle{xRools}
   \begin{center}
     \includegraphics[width=0.7\textwidth]{xrools.jpeg}
   \end{center}
@@ -205,7 +206,7 @@ emphstyle=\color{javapurple}\bfseries,
   \end{center}
 }
 
-\section{Scala Macros}
+\section{Scala Macros (yajom)}
 \subsection{Scala related features}
 \frame
 {\frametitle{Scala related features}
@@ -240,7 +241,7 @@ emphstyle=\color{javapurple}\bfseries,
 \frametitle{Java with JAXB plugin}
 \begin{lstlisting}
 A a = from.getA();
-if (verySpecial(from)) {
+if (from.isVerySpecial()) {
   B b = defaultB;
   if (a != null) {
     B realB = a.getB();
@@ -257,7 +258,7 @@ if (verySpecial(from)) {
 \begin{lstlisting}
 yajomOption(to.getC.getD.getE.setB) {
   val a = from.getA
-  if (verySpecial(from)) {
+  if (from.isVerySpecial) {
     var b = defaultB
     if (a != null) {
       val realB = a.getB
@@ -275,7 +276,7 @@ yajomOption(to.getC.getD.getE.setB) {
 \frametitle{Option-based yajom with maybe}
 \begin{lstlisting}
 yajomOption(to.getC.getD.getE.setB) {
-  if (verySpecial(from)) {
+  if (from.isVerySpecial) {
     val b = maybe(from.getA.getB)
     Some(b.getOrElse(defaultB))
   } else
