static presentation and last version of mapper

--- a/presentations/mapper/static_mapper.tex
+++ b/presentations/mapper/static_mapper.tex
@@ -87,9 +87,9 @@ emphstyle=\color{myOrange}\bfseries,
 \frame
 {\frametitle{Disclaimer}
 \begin{itemize}
-  \item<2-> I'm not a Scala expert.
-  \item<3-> Actually, I do not know Scala at all.
-  \item<4-> Lets discuss today not implementations, but ideas staying behind them.
+  \item<1> I'm not a Scala expert.
+  \item<1> Actually, I do not know Scala at all.
+  \item<1> Lets discuss today not implementations, but ideas staying behind them.
 \end{itemize}
 }
 
@@ -219,9 +219,9 @@ list
 \frame
 {\frametitle{xRools Pros}
 \begin{itemize}
-    \item<1-> Scala
-    \item<2-> Non-developers write rules
-    \item<3-> Dashboard 
+    \item<1> Scala
+    \item<1> Non-developers write rules
+    \item<1> Dashboard 
 \end{itemize}
 }
 
@@ -229,13 +229,13 @@ list
 \frame
 {\frametitle{xRools Cons}
 \begin{itemize}
-    \item<1-> Scala
-    \item<2-> Non-developers write rules
-    \item<3-> No compile-time checks
-    \item<4-> Uses reflection
-    \item<5-> No real IDE support
-    \item<6-> Functions defined away from its only usage
-    \item<7-> Debugging?
+    \item<1> Scala
+    \item<1> Non-developers write rules
+    \item<1> No compile-time checks
+    \item<1> Uses reflection
+    \item<1> No real IDE support
+    \item<1> Functions defined away from its only usage
+    \item<1> Debugging?
 \end{itemize}
 }
 
@@ -270,9 +270,9 @@ list
 \frame{
 \frametitle{JAXB plugin Pros}
 \begin{itemize}
-  \item<1-> Pure Java
-  \item<2-> Simple and clean
-  \item<3-> Simplify some code
+  \item<1> Pure Java
+  \item<1> Simple and clean
+  \item<1> Simplify some code
 \end{itemize}
 }
 
@@ -280,10 +280,10 @@ list
 \frame{
 \frametitle{JAXB plugin Cons}
 \begin{itemize}
-  \item<1-> Only for JAXB generated classes
-  \item<2-> Simplify only some code
-  \item<3-> Not declarative enough
-  \item<4-> Not mapper at all
+  \item<1> Only for JAXB generated classes
+  \item<1> Simplify only some code
+  \item<1> Not declarative enough
+  \item<1> Not mapper at all
 \end{itemize}
 }
 
@@ -298,7 +298,7 @@ list
 \frame{
 \frametitle{Can we do better?}
   \begin{center} 
-    \only<2-> {
+    \only<1> {
       \includegraphics[width=0.4\textwidth]{yajom.jpg} 
       \\~\\
       \large \textbf{CHALLENGE ACCEPTED}
@@ -416,11 +416,11 @@ yajomOption(to.getC.setB) {
 \frame{
 \frametitle{Yajom Pros}
 \begin{itemize}
-  \item<1-> Scala
-  \item<2-> Compile-time bulletproof
-  \item<3-> IDE support
-  \item<4-> Works with any classes without any changes
-  \item<5-> No problem with debugging
+  \item<1> Scala
+  \item<1> Compile-time bulletproof
+  \item<1> IDE support
+  \item<1> Works with any classes without any changes
+  \item<1> No problem with debugging
 \end{itemize}
 }
 
@@ -428,9 +428,9 @@ yajomOption(to.getC.setB) {
 \frame{
 \frametitle{Yajom Cons}
 \begin{itemize}
-  \item<1-> Scala
-  \item<2-> Maybe not mature enough
-  \only<3->{
+  \item<1> Scala
+  \item<1> Maybe not mature enough
+  \only<1>{
     \begin{textblock*}{35mm}(0.8\textwidth,45mm)%
       \includegraphics[width=35mm]{troll.png}
     \end{textblock*}
