new slides and awesome last pic

--- a/presentations/testing_like_a_boss/like_a_boss.tex
+++ b/presentations/testing_like_a_boss/like_a_boss.tex
@@ -219,15 +219,32 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 }
 
-\frame{
-  \begin{center}
-    \includegraphics[height=0.9\textheight]{we_can.png} 
-  \end{center}
+\subsection{junit-quickcheck}
+\frame{\frametitle{junit-quickcheck}
+  \begin{itemize}
+    \item Based on \texttt{org.junit.contrib.theories.*}
+    \item Annotation-based
+    \item MIT License
+  \end{itemize}
+}
+
+\frame{\frametitle{JUnit \texttt{Theory}}
+  \begin{itemize}
+    \item Experimental JUnit feature
+    \item \texttt{@RunWith(Theories.class)}
+    \item \texttt{@Theory}, \texttt{@DataPoint}, \texttt{@DataPoints} 
+  \end{itemize}
 }
 
 \frame{\frametitle{Demo}
   \begin{center}
     \includegraphics[width=0.8\textwidth]{cooking.jpg}
+  \end{center}
+}
+
+\frame{
+  \begin{center}
+    \includegraphics[height=0.9\textheight]{we_can.png} 
   \end{center}
 }
 
@@ -238,9 +255,9 @@ morecomment=[s][\color{blue}]{@}{\ }
     \item \href{http://www.haskell.org/haskellwiki/Introduction_to_QuickCheck2}{Introduction to QuickCheck2}
   \end{itemize}
 }
-\frame{
+\frame{\frametitle{Thank you!}
   \begin{center}
-    Thank You!
+    \includegraphics[height=0.8\textheight]{last.jpg}
   \end{center}
 }
 
