--- a/presentations/testing_like_a_boss/like_a_boss.tex
+++ b/presentations/testing_like_a_boss/like_a_boss.tex
@@ -222,7 +222,7 @@ morecomment=[s][\color{blue}]{@}{\ }
 \subsection{junit-quickcheck}
 \frame{\frametitle{junit-quickcheck}
   \begin{itemize}
-    \item Based on \texttt{org.junit.contrib.theories.*}
+    \item Based on \texttt{org.junit.experimental.theories.*}
     \item Annotation-based
     \item MIT License
   \end{itemize}
