rename presentation to "check it out"

--- a/presentations/check_it_out/check_it_out.tex
+++ b/presentations/check_it_out/check_it_out.tex
@@ -67,7 +67,7 @@ morecomment=[s][\color{blue}]{@}{\ }
 \setcounter{tocdepth}{1}
 
 \begin{document}
-\title{Testing Like A Boss}
+\title{Testing? Check It Out!}
 \author{Arkady Galyash}
 \institute{TosChart}
 \date{\today}
