any presentation is better with github logo

--- a/presentations/check_it_out/check_it_out.tex
+++ b/presentations/check_it_out/check_it_out.tex
@@ -327,7 +327,7 @@ morecomment=[s][\color{blue}]{@}{\ }
 \section{Links}
 \frame{\frametitle{Links}
   \begin{itemize}
-    \item \href{https://github.com/gark87/job-misc/tree/master/presentations/check_it_out/JohnDoeProject}{JohnDoeProject with examples}
+    \item \href{https://github.com/gark87/job-misc/tree/master/presentations/check_it_out/JohnDoeProject}{JohnDoeProject with examples} $\vcenter{\hbox{\includegraphics[width=2.5em]{github.png}}}$
     \item \href{http://www.haskell.org/haskellwiki/Introduction_to_QuickCheck2}{Introduction to QuickCheck2}
     \item \href{http://theyougen.blogspot.ru/search/label/quickcheck}{Blog dedicated to Java Quickcheck}
     \item \href{http://thinkrelevance.com/blog/2013/11/26/better-than-unit-tests}{Better Than Unit Tests}
